--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,16 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk 30
+
+    viewBinding {
+        enabled = true
+    }
 
     defaultConfig {
         applicationId "com.example.kotlinmvvm"
-        minSdk 21
-        targetSdk 31
+        minSdk 26
+        targetSdk 30
         versionCode 1
         versionName "1.0"
 
@@ -40,4 +44,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation "androidx.activity:activity-ktx:1.3.1"
+    implementation "androidx.fragment:fragment-ktx:1.3.6"
 }
